tests/fail/non_null_nullptr.tk.disabled
fn main() -> i32 {
    auto *p: i32 = null // SKIP: error[E0409]:
    return 0
}
